# e-flask

./: .env  .env.example  .flaskenv  .gitignore  Dockerfile  Makefile  README.md  config.py  docker-compose.yml  main.py  manage.py  pyproject.toml  requirements.txt
app/apidocs/: views.py
app/command/: views.py
app/fake/: fake_user.py  views.py
app/pdbc/: views.py
app/pkafka/: views.py
app/user/: views.py
app/xls/: views.py
models/: user.py  users.py
tests/: test_api.py  test_base.py  test_pdbc.py
utils/: command.py  fake.py  handle.py  pdbc.py  pes.py  pkafka.py  pmiko.py  xlstool.py
